feat: Project 선택 & 이동 구현

--- a/src/ProjectMainController.form
+++ b/src/ProjectMainController.form
@@ -104,7 +104,7 @@
               <text value="Title"/>
             </properties>
           </component>
-          <component id="4369b" class="javax.swing.JLabel">
+          <component id="4369b" class="javax.swing.JLabel" binding="projectTitleLabel">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -120,7 +120,7 @@
               <text value="Admin"/>
             </properties>
           </component>
-          <component id="b6536" class="javax.swing.JLabel">
+          <component id="b6536" class="javax.swing.JLabel" binding="adminNameLable">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -143,11 +143,7 @@
               </grid>
             </constraints>
             <properties>
-              <model>
-                <item value="Eric"/>
-                <item value="John"/>
-                <item value="Ave"/>
-              </model>
+              <model/>
             </properties>
           </component>
           <vspacer id="84172">
