--- a/src/ProjectMainController.form
+++ b/src/ProjectMainController.form
@@ -109,7 +109,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="projectTitle"/>
+              <text value="-"/>
             </properties>
           </component>
           <component id="70330" class="javax.swing.JLabel">
@@ -125,7 +125,7 @@
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="AdminName"/>
+              <text value="-"/>
             </properties>
           </component>
           <component id="430be" class="javax.swing.JLabel">
@@ -187,12 +187,12 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="de95e" class="javax.swing.JLabel">
+          <component id="de95e" class="javax.swing.JLabel" binding="userNameLabel">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="userName"/>
+              <text value="-"/>
             </properties>
           </component>
           <component id="cd676" class="javax.swing.JButton" binding="logoutButton" default-binding="true">
