--- a/src/IssueMainController.form
+++ b/src/IssueMainController.form
@@ -109,7 +109,7 @@
               <text value="Logout"/>
             </properties>
           </component>
-          <component id="c419a" class="javax.swing.JLabel">
+          <component id="c419a" class="javax.swing.JLabel" binding="userNameLabel">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
