feat: Statistics 구현 완

--- a/src/IssueDetailController.form
+++ b/src/IssueDetailController.form
@@ -100,7 +100,7 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <scrollpane id="a6cdb">
+      <scrollpane id="a6cdb" binding="mainScorllPane">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="760" height="500"/>
